# in-context-calibration

./: batch_job.sh  classify_sst2.py  data_handling.py  pyproject.toml  test.ipynb  toy_transformer.py
chat_templates/: mistral-chat-template.jinja
results/: sst2_context_0_google_gemma-2-2b-it.csv  sst2_context_0_google_gemma-2-2b-it.pkl  sst2_context_0_google_gemma-2-9b-it.csv  sst2_context_0_google_gemma-2-9b-it.pkl  sst2_context_0_meta-llama_Llama-3.2-1B-Instruct.csv  sst2_context_0_meta-llama_Llama-3.2-1B-Instruct.pkl  sst2_context_0_meta-llama_Llama-3.2-3B-Instruct.csv  sst2_context_0_meta-llama_Llama-3.2-3B-Instruct.pkl  sst2_context_0_mistralai_Mistral-7B-Instruct-v0.3.csv  sst2_context_0_mistralai_Mistral-7B-Instruct-v0.3.pkl  sst2_context_0_tiiuae_Falcon3-10B-Instruct.csv  sst2_context_0_tiiuae_Falcon3-10B-Instruct.pkl  sst2_context_128_google_gemma-2-2b-it.csv  sst2_context_128_google_gemma-2-9b-it.csv  sst2_context_128_google_gemma-2-9b-it.pkl  sst2_context_128_meta-llama_Llama-3.2-1B-Instruct.csv  sst2_context_128_meta-llama_Llama-3.2-1B-Instruct.pkl  sst2_context_128_meta-llama_Llama-3.2-3B-Instruct.csv  sst2_context_128_meta-llama_Llama-3.2-3B-Instruct.pkl  sst2_context_128_meta-llama_Llama-3.3-70B-Instruct.csv  sst2_context_16_google_gemma-2-2b-it.csv  sst2_context_16_google_gemma-2-2b-it.pkl  sst2_context_16_google_gemma-2-9b-it.csv  sst2_context_16_google_gemma-2-9b-it.pkl  sst2_context_16_meta-llama_Llama-3.2-1B-Instruct.csv  sst2_context_16_meta-llama_Llama-3.2-1B-Instruct.pkl  sst2_context_16_meta-llama_Llama-3.2-3B-Instruct.csv  (+83 more)
(+34 files in other folders)
